digital: (3.8 backport) restructure equalizers and add dfe (#3306)
* digital: restructure equalizers and add dfe

This commit restructures the linear equalizer to have a separate
specifiable adaptive algorithm.  Generally this works the same as the
previous LMS and CMA decision directed equalizers, but also adds the
ability to equalize using training sequences as well.

Also, a Decision Feedback Equalizer structure is added

* digital: more const in equalizers

* digital: equalizers - more safety based on review

* digital: dfe - use deque instead of vector for decision_history

* digital - equalizers, further cleanup

(cherry picked from commit 3c1750c481a578bd831fce933502fde88444eb54)
Signed-off-by: Jared Dulmage <jared.dulmage@caliola.com>

--- a/gr-digital/swig/CMakeLists.txt
+++ b/gr-digital/swig/CMakeLists.txt
@@ -67,6 +67,7 @@ install(
   FILES
   ${SWIGFILES}
   constellation.i
+  equalizers.i
   ofdm_equalizer.i
   packet_header.i
   ${SWIGDOCFILES}
@@ -78,3 +79,4 @@ GR_PYTHON_INSTALL(
   FILES ${CMAKE_CURRENT_BINARY_DIR}/digital_swig.py
   DESTINATION ${GR_PYTHON_DIR}/gnuradio/digital
 )
+
