Bring man pages in-tree from project gnuradio/pkg_gnuradio
- Move BUILD_DATE to top CMakeLists so it's available in other modules. Add Z
  suffix to indicate UTC.
- Add a BUILD_DATE_SHORT with just yyy-mm-dd more appropriate for man pages
- Put man pages in man/docs and give them a .in extension
- Replace version and date placeholders at cmake configure time
- Improve gnuradio-companion man page, expanding description and
  updating options
- Remove help2man generated man pages, and man pages for non-existent
  commands

Signed-off-by: David Pi <david.pinho@gmail.com>
(cherry picked from commit 7397abea21af8424cae0ab91ddcef2b85e55e293)
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,6 +235,7 @@ SET(GR_DATA_DIR        share CACHE PATH "Base location for data")
 SET(GR_PKG_DATA_DIR    ${GR_DATA_DIR}/${CMAKE_PROJECT_NAME} CACHE PATH "Path to install package data")
 SET(GR_DOC_DIR         ${GR_DATA_DIR}/doc CACHE PATH "Path to install documentation")
 SET(GR_PKG_DOC_DIR     ${GR_DOC_DIR}/${CMAKE_PROJECT_NAME}-${DOCVER} CACHE PATH "Path to install package docs")
+SET(GR_MAN_DIR         ${GR_DATA_DIR}/man CACHE PATH "Path to install man pages")
 SET(GR_LIBEXEC_DIR     libexec CACHE PATH "Path to install libexec files")
 SET(GR_PKG_LIBEXEC_DIR ${GR_LIBEXEC_DIR}/${CMAKE_PROJECT_NAME} CACHE PATH "Path to install package libexec files")
 SET(GRC_BLOCKS_DIR     ${GR_PKG_DATA_DIR}/grc/blocks CACHE PATH "Path to install GRC blocks")
