--- a/gr-digital/grc/digital_chunks_to_symbols.block.yml
+++ b/gr-digital/grc/digital_chunks_to_symbols.block.yml
@@ -61,7 +61,7 @@ cpp_templates:
     includes: ['#include <gnuradio/digital/chunks_to_symbols.h>']
     declarations: 'digital::chunks_to_symbols_${in_type.fcn}${out_type.fcn}::sptr ${id};'
     make: |-
-        % if str(out_type.table)=="float_vector":
+        % if str(out_type.table)=="real_vector":
         std::vector<float> symbol_table = {${str(symbol_table)[1:-1]}};
         % else:
         std::vector<gr_complex> symbol_table = {${str(symbol_table)[1:-1]}};
