fixup! github: Add Centos 7 to GH-A, separate Doxygen

--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -27,6 +27,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       name: Checkout Project
+      with:
+        submodules: 'recursive'
     - name: CMake
       run: 'cd /build && cmake ${GITHUB_WORKSPACE}'
     - name: Make Docs
