--- a/gr-soapy/python/soapy/CMakeLists.txt
+++ b/gr-soapy/python/soapy/CMakeLists.txt
@@ -10,24 +10,32 @@
 # Include python install macros
 ########################################################################
 include(GrPython)
-if(NOT PYTHONINTERP_FOUND)
-    return()
-endif()
-
-add_subdirectory(bindings)
 
 ########################################################################
 # Install python sources
 ########################################################################
 GR_PYTHON_INSTALL(
-    FILES
-    __init__.py
-    DESTINATION ${GR_PYTHON_DIR}/soapy
+  FILES
+  __init__.py
+  DESTINATION ${GR_PYTHON_DIR}/gnuradio/soapy
 )
 
 ########################################################################
 # Handle the unit tests
 ########################################################################
-include(GrTest)
+if(ENABLE_TESTING)
+  set(GR_TEST_TARGET_DEPS "")
+  set(GR_TEST_LIBRARY_DIRS "")
+  set(GR_TEST_PYTHON_DIRS
+    ${CMAKE_BINARY_DIR}/gnuradio-runtime/python
+    )
 
-set(GR_TEST_TARGET_DEPS gnuradio-soapy)
+  include(GrTest)
+  file(GLOB py_qa_test_files "qa_*.py")
+  foreach(py_qa_test_file ${py_qa_test_files})
+    get_filename_component(py_qa_test_name ${py_qa_test_file} NAME_WE)
+    GR_ADD_TEST(${py_qa_test_name} ${QA_PYTHON_EXECUTABLE} -B ${py_qa_test_file})
+  endforeach(py_qa_test_file)
+endif(ENABLE_TESTING)
+
+add_subdirectory(bindings)
