--- a/gr-soapy/python/soapy/bindings/CMakeLists.txt
+++ b/gr-soapy/python/soapy/bindings/CMakeLists.txt
@@ -5,23 +5,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 #
 
-########################################################################
-# Check if there is C++ code at all
-########################################################################
-if(NOT soapy_sources)
-    MESSAGE(STATUS "No C++ sources... skipping python bindings")
-    return()
-endif(NOT soapy_sources)
-
-########################################################################
-# Check for pygccxml
-########################################################################
-GR_PYTHON_CHECK_MODULE_RAW(
-    "pygccxml"
-    "import pygccxml"
-    PYGCCXML_FOUND
-    )
-
 include(GrPybind)
 
 ########################################################################
@@ -30,11 +13,12 @@ include(GrPybind)
 
 list(APPEND soapy_python_files
     source_python.cc
-    sink_python.cc python_bindings.cc)
+    sink_python.cc
+    python_bindings.cc)
 
-GR_PYBIND_MAKE_OOT(soapy 
-   ../..
+GR_PYBIND_MAKE_CHECK_HASH(soapy 
+   ../../..
    gr::soapy
    "${soapy_python_files}")
 
-install(TARGETS soapy_python DESTINATION ${GR_PYTHON_DIR}/soapy COMPONENT pythonapi)
+install(TARGETS soapy_python DESTINATION ${GR_PYTHON_DIR}/gnuradio/soapy COMPONENT pythonapi)
