gr-soapy: WIP fix up paths
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/gr-soapy/grc/soapy_sink.block.yml
+++ b/gr-soapy/grc/soapy_sink.block.yml
@@ -263,7 +263,7 @@ asserts:
 - ${ nchan > 0 }
 
 templates:
-    imports: import soapy
+    imports: from gnuradio import soapy
     make: |-
         None
         if "${devname}" == 'custom':
