--- a/gr-soapy/grc/soapy_source.block.yml
+++ b/gr-soapy/grc/soapy_source.block.yml
@@ -410,7 +410,7 @@ asserts:
 
 templates:
     imports: |-
-      import soapy
+      from gnuradio import soapy
       import distutils
       from distutils import util
     make: |
