cmake: Remove mis-matching arguments warning.
Signed-off-by: Ron Economos <w6rz@comcast.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,9 +298,9 @@ SET(GR_CONF_DIR etc CACHE PATH "Path to install config files")
 string(COMPARE EQUAL "${CMAKE_INSTALL_PREFIX}" "/usr" isusr)
 if(isusr OR MSVC)
   SET(SYSCONFDIR "/${GR_CONF_DIR}" CACHE PATH "System configuration directory")
-else(isusr)
+else()
   SET(SYSCONFDIR "${CMAKE_INSTALL_PREFIX}/${GR_CONF_DIR}" CACHE PATH "System configuration directory" FORCE)
-endif(isusr)
+endif()
 
 SET(GR_PKG_CONF_DIR ${SYSCONFDIR}/${CMAKE_PROJECT_NAME}/conf.d CACHE PATH "Path to install package configs")
 SET(GR_PREFSDIR     ${SYSCONFDIR}/${CMAKE_PROJECT_NAME}/conf.d CACHE PATH "Path to install preference files")
