--- a/gr-qtgui/grc/qtgui_waterfall_sink_x.block.yml
+++ b/gr-qtgui/grc/qtgui_waterfall_sink_x.block.yml
@@ -38,6 +38,9 @@ parameters:
         window.WIN_RECTANGULAR, window.WIN_KAISER, window.WIN_FLATTOP]
     option_labels: [Blackman-harris, Hamming, Hann, Blackman, Rectangular, Kaiser,
         Flat-top]
+    option_attributes:
+        cpp_opts: [fft::window::WIN_BLACKMAN_hARRIS, fft::window::WIN_HAMMING, fft::window::WIN_HANN, fft::window::WIN_BLACKMAN,
+        fft::window::WIN_RECTANGULAR, fft::window::WIN_KAISER, fft::window::WIN_FLATTOP]
     hide: part
 -   id: fc
     label: Center Frequency (Hz)
@@ -311,7 +314,7 @@ cpp_templates:
     make: |-
         this->${id} = qtgui::${type.fcn}::make(
             ${fftsize}, // size
-            ${wintype}, // wintype
+            ${wintype.cpp_opts}, // wintype
             ${fc}, // fc
             ${bw}, // bw
             ${name}, // name
@@ -355,7 +358,6 @@ cpp_templates:
         _${id}_win = this->${id}->qwidget();
         this->top_layout->addWidget(_${id}_win);
     translations:
-        firdes.: 'filter::firdes::'
         'True': 'true'
         'False': 'false'
 
