--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,8 +52,8 @@ GR_REGISTER_COMPONENT("testing-support" ENABLE_TESTING)
 # Set the version information here
 SET(VERSION_MAJOR 3)
 SET(VERSION_API   8)
-SET(VERSION_ABI   2)
-SET(VERSION_PATCH git)
+SET(VERSION_ABI   3)
+SET(VERSION_PATCH 0-rc1)
 include(GrVersion) #setup version info
 
 # Minimum dependency versions for central dependencies:
