grc: fix rational resampler yml template
Signed-off-by: Christophe Seguinot <christophe.seguinot@univ-lille.fr>
(cherry picked from commit ab3137c5fecd90a3b1c5b5c49e10c2fd81516615)
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/gr-filter/grc/filter_rational_resampler_xxx.block.yml
+++ b/gr-filter/grc/filter_rational_resampler_xxx.block.yml
@@ -51,7 +51,7 @@ templates:
         % else:
                 taps=None,
         % endif
-        % if float(fbw) != 0:
+        % if fbw:
                 fractional_bw=${fbw})
         % else:
                 fractional_bw=None)
