--- a/gr-iio/grc/iio_pluto_sink.block.yml
+++ b/gr-iio/grc/iio_pluto_sink.block.yml
@@ -89,6 +89,6 @@ templates:
     imports: from gnuradio import iio
     make: iio.pluto_sink(${uri}, ${frequency}, ${samplerate}, ${bandwidth}, ${buffer_size}, ${cyclic}, ${attenuation1}, ${filter_source}, ${filter}, ${fpass}, ${fstop})
     callbacks:
-      - set_params(${frequency}, ${samplerate}, ${bandwidth}, ${buffer_size}, ${cyclic}, ${attenuation1}, ${filter_source}, ${filter}, ${fpass}, ${fstop})
+      - set_params(${frequency}, ${samplerate}, ${bandwidth}, ${cyclic}, ${attenuation1}, ${filter_source}, ${filter}, ${fpass}, ${fstop})
 
 file_format: 1
