--- a/gr-iio/python/iio/bindings/CMakeLists.txt
+++ b/gr-iio/python/iio/bindings/CMakeLists.txt
@@ -12,6 +12,9 @@ list(APPEND iio_python_files
     device_sink_python.cc
     device_source_python.cc
     iio_types_python.cc
+    ad9081_source_python.cc
+    ad9081_common_python.cc
+    ad9081_sink_python.cc
     python_bindings.cc)
 
 if(${libad9361_FOUND})
