--- a/gr-iio/lib/CMakeLists.txt
+++ b/gr-iio/lib/CMakeLists.txt
@@ -9,6 +9,9 @@
 # Setup library
 ########################################################################
 add_library(gnuradio-iio
+  ad9081_source_impl.cc
+  ad9081_sink_impl.cc
+  ad9081_common_impl.cc
   attr_sink_impl.cc
   attr_source_impl.cc
   attr_updater_impl.cc
