digital: Added a crc16 basic block. (#4649)
Signed-off-by: cmrincon <cmrincon611@hotmail.com>
(cherry picked from commit 7c1d67d6b9e64d93d2b66615be887f23802f16a5)
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/gr-digital/include/gnuradio/digital/CMakeLists.txt
+++ b/gr-digital/include/gnuradio/digital/CMakeLists.txt
@@ -35,6 +35,7 @@ install(FILES
     costas_loop_cc.h
     cpmmod_bc.h
     crc32.h
+    crc16_async_bb.h
     crc32_bb.h
     crc32_async_bb.h
     decision_feedback_equalizer.h
