--- a/gr-digital/lib/CMakeLists.txt
+++ b/gr-digital/lib/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(gnuradio-digital
     costas_loop_cc_impl.cc
     cpmmod_bc_impl.cc
     crc32.cc
+    crc16_async_bb_impl.cc
     crc32_bb_impl.cc
     crc32_async_bb_impl.cc
     decision_feedback_equalizer_impl.cc
