CI: Update the Fedora Container to F34
this has the main advantage of bringing UHD4, so we can test more of gr-uhd.

Signed-off-by: Marcus Müller <mmueller@gnuradio.org>
Signed-off-by: Martin Braun <martin@gnuradio.org>

--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -57,6 +57,9 @@ jobs:
           - distro: 'Fedora 33'
             containerid: 'gnuradio/ci:fedora-33-3.9'
             cxxflags: ''
+          - distro: 'Fedora 34'
+            containerid: 'gnuradio/ci:fedora-34-3.9'
+            cxxflags: ''
           - distro: 'CentOS 8.3'
             containerid: 'gnuradio/ci:centos-8.3-3.9'
             cxxflags: '-Werror -Wno-error=invalid-pch'
