--- a/gr-iio/grc/iio_pluto_sink.block.yml
+++ b/gr-iio/grc/iio_pluto_sink.block.yml
@@ -93,7 +93,7 @@ asserts:
 templates:
     imports: from gnuradio import iio
     make: |
-        iio.pluto_sink(${uri}, ${buffer_size}, ${cyclic})
+        iio.fmcomms2_sink(${uri}, ${buffer_size}, ${cyclic})
         self.${id}.set_len_tag_key(${len_tag_key})
         self.${id}.set_bandwidth(${bandwidth})
         self.${id}.set_frequency(${frequency})
