iio: pluto uri convenience function
Signed-off-by: Josh Morman <jmorman@peratonlabs.com>

--- a/gr-iio/python/iio/bindings/CMakeLists.txt
+++ b/gr-iio/python/iio/bindings/CMakeLists.txt
@@ -22,8 +22,7 @@ list(APPEND iio_python_files
     # fmcomms5_sink_python.cc
     # fmcomms5_source_f32c_python.cc
     # fmcomms5_source_python.cc
-    # pluto_sink_python.cc
-    # pluto_source_python.cc
+    pluto_utils_python.cc
     )
 endif(${libad9361_FOUND})
 
