--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,8 +44,8 @@ include(GrComponent)
 # Set the version information here
 SET(VERSION_MAJOR 3)
 SET(VERSION_API   9)
-SET(VERSION_ABI   3)
-SET(VERSION_PATCH 0)
+SET(VERSION_ABI   4)
+SET(VERSION_PATCH 0-rc1)
 include(GrVersion) #setup version info
 
 # Minimum dependency versions for central dependencies:
