--- a/gr-utils/modtool/templates/gr-newmod/python/howto/CMakeLists.txt
+++ b/gr-utils/modtool/templates/gr-newmod/python/howto/CMakeLists.txt
@@ -22,7 +22,7 @@ add_subdirectory(bindings)
 GR_PYTHON_INSTALL(
     FILES
     __init__.py
-    DESTINATION ${GR_PYTHON_DIR}/howto
+    DESTINATION ${GR_PYTHON_DIR}/gnuradio/howto
 )
 
 ########################################################################
