--- a/gr-utils/modtool/templates/gr-newmod/python/howto/bindings/CMakeLists.txt
+++ b/gr-utils/modtool/templates/gr-newmod/python/howto/bindings/CMakeLists.txt
@@ -32,7 +32,7 @@ list(APPEND howto_python_files
     python_bindings.cc)
 
 GR_PYBIND_MAKE_OOT(howto
-   ../..
+   ../../..
    gr::howto
    "${howto_python_files}")
 
@@ -44,4 +44,4 @@ add_custom_target(
     ${CMAKE_BINARY_DIR}/test_modules/howto/
   DEPENDS howto_python)
 
-install(TARGETS howto_python DESTINATION ${GR_PYTHON_DIR}/howto COMPONENT pythonapi)
+install(TARGETS howto_python DESTINATION ${GR_PYTHON_DIR}/gnuradio/howto COMPONENT pythonapi)
