runtime: typed sync blocks
Many blocks are sync and almost all blocks have known IO types at
instantiation. This block type tries to make use of that.

The benefits are:

1. type-safe `work`
2. Less boilerplate code

Missing: Documentation
(but the unit test illustrates usage)

Signed-off-by: Marcus Müller <mmueller@gnuradio.org>

--- a/gnuradio-runtime/lib/CMakeLists.txt
+++ b/gnuradio-runtime/lib/CMakeLists.txt
@@ -338,6 +338,7 @@ if(ENABLE_TESTING)
     qa_host_buffer.cc
     qa_vmcircbuf.cc
     qa_stream_iterators.cc
+    qa_typed_sync_block.cc
   )
   list(APPEND GR_TEST_TARGET_DEPS gnuradio-runtime gnuradio-pmt)
 
