cmake: build python deps conditionally
Signed-off-by: Josh Morman <jmorman@gnuradio.org>
(cherry picked from commit b8d853a1a04b16cf9261e216b5330a4e7523b6ad)
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/gnuradio-runtime/CMakeLists.txt
+++ b/gnuradio-runtime/CMakeLists.txt
@@ -23,6 +23,7 @@ GR_CHECK_LINUX_SCHED_AVAIL()
 # Register component
 ########################################################################
 include(GrComponent)
+if (ENABLE_PYTHON)
 GR_REGISTER_COMPONENT("gnuradio-runtime" ENABLE_GNURADIO_RUNTIME
     Boost_FOUND
     PYTHONINTERP_FOUND
@@ -30,6 +31,14 @@ GR_REGISTER_COMPONENT("gnuradio-runtime" ENABLE_GNURADIO_RUNTIME
     LOG4CPP_FOUND
     pybind11_FOUND
 )
+else()
+GR_REGISTER_COMPONENT("gnuradio-runtime" ENABLE_GNURADIO_RUNTIME
+    Boost_FOUND
+    PYTHONINTERP_FOUND
+    MPLIB_FOUND
+    spdlog_FOUND
+)
+endif()
 
 get_filename_component(GNURADIO_RUNTIME_PYTHONPATH
     ${CMAKE_SOURCE_DIR}/python ABSOLUTE
