Set patch level to "git"
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ include(GrComponent)
 SET(VERSION_MAJOR 3)
 SET(VERSION_API   10)
 SET(VERSION_ABI   1)
-SET(VERSION_PATCH 1)
+SET(VERSION_PATCH git)
 include(GrVersion) #setup version info
 
 #Set minimum version requirements
