--- a/gr-digital/lib/CMakeLists.txt
+++ b/gr-digital/lib/CMakeLists.txt
@@ -32,9 +32,12 @@ add_library(gnuradio-digital
     costas_loop_cc_impl.cc
     cpmmod_bc_impl.cc
     crc32.cc
+    crc.cc
     crc16_async_bb_impl.cc
     crc32_bb_impl.cc
     crc32_async_bb_impl.cc
+    crc_append_impl.cc
+    crc_check_impl.cc
     decision_feedback_equalizer_impl.cc
     descrambler_bb_impl.cc
     diff_decoder_bb_impl.cc
